# KMM-Sample

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/androidApp/: build.gradle.kts
app/androidApp/src/main/java/com/example/myapplicationmultiplatform/android/: MainActivity.kt
app/desktopApp/: build.gradle.kts
app/shared/: CMakeLists.txt  build.gradle.kts
app/shared/src/androidMain/kotlin/com/example/myapplicationmultiplatform/: Platform.android.kt
app/shared/src/commonMain/cpp/: AppBackendCxx.cpp  CMakeLists.txt
app/shared/src/commonMain/kotlin/com/example/myapplicationmultiplatform/: App.kt  AppBackend.kt  Greeting.kt  Platform.kt
app/shared/src/desktopMain/kotlin/: Platform.desktop.kt
app/shared/src/iosMain/kotlin/com/example/myapplicationmultiplatform/: Platform.ios.kt
gradle/wrapper/: gradle-wrapper.properties
